--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>29-品优购</title>
+    <title>29-品优购首页</title>
     <link rel="stylesheet" href="./lib/mui/css/mui.css">
     <link rel="stylesheet" href="./lib/mui/fonts/mui.ttf">
     <link rel="stylesheet" href="./lib/fontawesome/css/font-awesome.css">
@@ -60,19 +60,19 @@
         </div>
         <div class="footer">
             <nav class="mui-bar mui-bar-tab">
-                <a class="mui-tab-item mui-active" href="#tabbar">
+                <a class="mui-tab-item mui-active" href="./index.html">
                     <span class="mui-icon mui-icon-home"></span>
                     <span class="mui-tab-label">首页</span>
                 </a>
-                <a class="mui-tab-item" href="#tabbar-with-chat">
+                <a class="mui-tab-item" href="./views/category.html">
                     <span class="mui-icon mui-icon-list"></span>
                     <span class="mui-tab-label">分类</span>
                 </a>
-                <a class="mui-tab-item" href="#tabbar-with-contact">
+                <a class="mui-tab-item" href="./views/cart.html">
                     <span class="fa fa-shopping-cart"></span>
                     <div class="mui-tab-label" style='font-size: 12px'>购物车</div>
                 </a>
-                <a class="mui-tab-item" href="#tabbar-with-map">
+                <a class="mui-tab-item" href="./views/user.html">
                     <span class="mui-icon mui-icon-contact"></span>
                     <span class="mui-tab-label">我的</span>
                 </a>
@@ -98,7 +98,7 @@
     {{each data value index}}
     <div class="mui-indicator {{index==0?'mui-active':''}}"></div>
     {{/each}}
-</script>
+</script> 
 
 
 <!-- 动态渲染商品列表 -->
