--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                     <span class="mui-icon mui-icon-list"></span>
                     <span class="mui-tab-label">分类</span>
                 </a>
-                <a class="mui-tab-item" href="./views/cart.html">
+                <a class="mui-tab-item cart" href="./views/cart.html">
                     <span class="fa fa-shopping-cart"></span>
                     <div class="mui-tab-label" style='font-size: 12px'>购物车</div>
                 </a>
-                <a class="mui-tab-item" href="./views/user.html">
+                <a class="mui-tab-item my" href="./views/user.html">
                     <span class="mui-icon mui-icon-contact"></span>
                     <span class="mui-tab-label">我的</span>
                 </a>
